--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -7,7 +7,7 @@
 
 # NOTE: If testing pytorch/builder changes you can change this variable to change what pytorch/builder reference
 #       the binary builds will check out
-{%- set builder_branch = "main" -%}
+{%- set builder_branch = "zhuhong61:zh/fix_check_cpuabi" -%}
 
 {%- macro concurrency(build_environment) -%}
 concurrency:
